Fix question overflow

--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ button {
 
 .calculator {
     background-color: black;
-    width: max-content;
+    width: 30em;
     margin-top: 4em;
 }
 
